# labAISD-3

./: .gitignore  CMakeLists.txt  functions.h  lab3.cpp  list.h
